--- a/templates/results.html
+++ b/templates/results.html
@@ -43,7 +43,7 @@
          
                 <h3>
                     <div class="alert alert-info" role="alert">
-                        For querry: {{querry}}
+                        For query: {{querry}}
                       </div>
                 </h3>
                 <br>
@@ -88,6 +88,8 @@
             <a class="text-info" href="https://github.com/RCern">Radu Cernaianu</a>
             and
             <a class="text-info" href="https://github.com/Ricainz">Clément Lambling</a>
+            and
+            <a class="text-info" href="https://github.com/Llouis5">Louis Potron</a>
         </div>
         <!-- Copyright -->
 
