--- a/templates/base.html
+++ b/templates/base.html
@@ -98,6 +98,8 @@
         <a class="text-info" href="https://github.com/RCern">Radu Cernaianu</a>
         and
         <a class="text-info" href="https://github.com/Ricainz">Clément Lambling</a>
+        and
+        <a class="text-info" href="https://github.com/Llouis5">Louis Potron</a>
       </div>
       <!-- Copyright -->
 
